//
// Copyright Â© 2019 Apple Inc. and the ServiceTalk project authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "test_shared.proto";

option java_multiple_files = true;
option java_package = "io.servicetalk.grpc.protoc.test.multi";
option java_outer_classname = "HelloWorldProto";

package test.multi;

service Tester {
    rpc test (TestRequest) returns (TestReply) {}
    rpc testBiDiStream (stream TestRequest) returns (stream TestReply) {}
    rpc testResponseStream (TestRequest) returns (stream TestReply) {}
    rpc testRequestStream (stream TestRequest) returns (TestReply) {}
}

service Tester2 {
    rpc testShared (TestRequest) returns (test.shared.SharedReply) {}
    rpc testUntils (test.shared.Generic.Empty) returns (stream test.shared.Untils) {
        option deprecated = true;
    }
}

message TestRequest {
    string name = 1;
}

message TestReply {
    string message = 1;
}
